--- a/docs/user-manual/modules/ROOT/pages/camel-jbang-kubernetes.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-jbang-kubernetes.adoc
@@ -928,8 +928,6 @@ The trait volume mounts follow some best practices in specifying the mount paths
 
 The ingress trait enhance the Kubernetes manifest with an Ingress resource to expose the application to the outside world. This requires the presence in the Kubernetes manifest of a Service Resource.
 
-The Camel JBang plugin automatically creates an Ingress Resource if the Service Resource is generated for the Camel route's service trait application.
-
 The ingress trait provides the following configuration options:
 
 [cols="2m,1m,5a"]
@@ -938,7 +936,7 @@ The ingress trait provides the following configuration options:
 
 | ingress.enabled
 | bool
-| Can be used to enable or disable a trait. All traits share this common property (default `true`).
+| Can be used to enable or disable a trait. All traits share this common property (default `false`).
 
 | ingress.annotations
 | map[string]string
@@ -973,7 +971,7 @@ You may specify these options with the export command to customize the Ingress R
 
 [source,bash]
 ----
-camel kubernetes export Sample.java --trait ingress.host=example.com --trait ingress.path=/sample(/|$)(.*) --trait ingress.pathType=ImplementationSpecific --trait ingress.annotations=nginx.ingress.kubernetes.io/rewrite-target=/\$2 --trait ingress.annotations=nginx.ingress.kubernetes.io/use-regex=true
+camel kubernetes export Sample.java --trait ingress.enabled=true --trait ingress.host=example.com --trait ingress.path=/sample(/|$)(.*) --trait ingress.pathType=ImplementationSpecific --trait ingress.annotations=nginx.ingress.kubernetes.io/rewrite-target=/\$2 --trait ingress.annotations=nginx.ingress.kubernetes.io/use-regex=true
 ----
 
 
@@ -1017,8 +1015,6 @@ The Route trait enhance the Kubenetes manifest with a Route resource to expose t
 
 NOTE: You need to enable the Openshift profile trait with `--trait-profile=openshift` option.
 
-The Camel JBang plugin automatically creates an Route Resource if the Service Resource is generated for the Camel route's service trait application.
-
 The Route trait provides the following configuration options:
 
 [cols="2m,1m,5a"]
@@ -1027,7 +1023,7 @@ The Route trait provides the following configuration options:
 
 | route.enabled
 | bool
-| Can be used to enable or disable a trait. All traits share this common property (default `true`).
+| Can be used to enable or disable a trait. All traits share this common property (default `false`).
 
 | route.annotations
 | map[string]string
@@ -1075,7 +1071,7 @@ You may specify these options with the export command to customize the Route Res
 
 [source,bash]
 ----
-camel kubernetes export Sample.java --trait-profile=openshift --trait ingress.host=example.com -t route.tls-termination=edge -t route.tls-certificate=file:/tmp/tls.crt -t route.tls-key=file:/tmp/tls.key
+camel kubernetes export Sample.java --trait-profile=openshift -t route.enabled=true --trait route.host=example.com -t route.tls-termination=edge -t route.tls-certificate=file:/tmp/tls.crt -t route.tls-key=file:/tmp/tls.key
 ----
 
 
